<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="PMPS" Id="{53ff6662-fc6b-4a00-9f46-186d8230905b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    fbArbiter: FB_Arbiter;
    fbFastFaultOutput1: FB_HardwareFFOutput;
    fbFastFaultOutput2: FB_HardwareFFOutput;

// MPS fault reset, add temporarily to use FB_MPA
     xFastFaultReset :   BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>