<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_3_PMPS_POST" Id="{336c6a08-057c-4abe-b1ea-e25741c63140}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_3_PMPS_POST
VAR
    fbArbiterIO: FB_SubSysToArbiter_IO;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL.fbFastFaultOutput1.Execute();
GVL.fbFastFaultOutput2.Execute();

fbArbiterIO(
    Arbiter:=GVL.fbArbiter,
    fbFFHWO:=GVL.fbFastFaultOutput1);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>